# life_support

./: .gitignore  Cargo.toml  build.rs  flake.nix  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: incubator.rs  lib.rs  main.rs  medium_replacement.rs  syringe_dispenser.rs  temp_data.out  temp_regulator.rs
src/drivers/: drv8871.rs  mod.rs  slf3s.rs  thermistor.rs
src/lib/: medium_replacement.rs
