[package]
name = "life_support"
version = "0.1.0"
edition = "2021"
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
rev = "14ec0d27bf572376783d762e0c54349fcc85cdcf"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "14ec0d27bf572376783d762e0c54349fcc85cdcf"
features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
rev = "14ec0d27bf572376783d762e0c54349fcc85cdcf"
#path = "../embassy/embassy-stm32"
features = [
  "nightly",
  "defmt",
  "unstable-pac",
  "stm32f407vg",
  "memory-x",
  "time-driver-any",
  "exti",
  "unstable-traits",
  "chrono",
]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
rev = "14ec0d27bf572376783d762e0c54349fcc85cdcf"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "14ec0d27bf572376783d762e0c54349fcc85cdcf"
#path = "../embassy/embassy-time"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]