[package]
name = "life_support"
version = "0.1.0"
edition = "2021"
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
defmt = "0.3"
defmt-rtt = "0.4"
libm = "0.2.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2.0.0", features = ["nightly"] }

[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
branch = "main"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
branch = "main"
features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
branch = "main"
features = [
  "defmt",
  "stm32f407vg",
  "time-driver-any",
  "exti",
  "chrono",
]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
branch = "main"
features = ["defmt"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
branch = "main"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]